--- a/pi_network/Cargo.toml
+++ b/pi_network/Cargo.toml
@@ -24,7 +24,7 @@ dashmap = "5.4"
 parking_lot = "0.12"
 tracing = "0.1"
 
-# Real crypto dependencies
+# Real crypto dependencies (fixed)
 ed25519-dalek = "2.0"
-tiny-bip39 = "1.0"
 bs58 = "0.5"
+bip39 = "1.0"  # Use bip39 instead of tiny-bip39
